<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/lightblack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/target"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/target"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="#FBFBF9"
            android:textAlignment="center"
            android:hint="@string/set"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#000000"
            />

        <Button
            android:id="@+id/roll_button"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lightblack"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/new_game" />
        <Button
            android:id="@+id/about_button"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/lightblack"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/about_label" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/easy"
                android:layout_gravity="center_vertical"
                />
            <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:max="1"
            android:progressBackgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/hard"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>