<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"
        android:text="@string/name" />
    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/student_id" />
    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center_horizontal"

        android:text="@string/about_content" />
</LinearLayout>